# dgw

./: .gitignore  CMakeLists.txt  README.md
cmake/: dgwConfig.cmake.in
examples/: coupled_summa.cpp  richards_column.cpp  theis_well.cpp
include/dgw/: dgw.hpp
include/dgw/bmi/: bmi.hpp  dgw_bmi.hpp
include/dgw/core/: config.hpp  mesh.hpp  parameters.hpp  state.hpp  types.hpp
include/dgw/coupling/: boundary_conditions.hpp  recharge.hpp  remapper.hpp  stream_aquifer.hpp
include/dgw/physics/: boussinesq.hpp  confined.hpp  linear_diffusion.hpp  physics_base.hpp  richards_3d.hpp  two_layer.hpp  water_retention.hpp
include/dgw/solvers/: linear_solver.hpp  newton.hpp  time_stepping.hpp
python/dgw/: __init__.py  bindings.cpp  jax_wrapper.py
src/bmi/: dgw_bmi.cpp
src/core/: config.cpp  mesh.cpp  parameters.cpp  state.cpp
src/coupling/: boundary_conditions.cpp  recharge.cpp  remapper.cpp  stream_aquifer.cpp
src/physics/: boussinesq.cpp  confined.cpp  linear_diffusion.cpp  richards_3d.cpp  two_layer.cpp  water_retention.cpp
src/solvers/: linear_solver.cpp  newton.cpp  time_stepping.cpp
tests/: test_boussinesq.cpp  test_gradients.cpp  test_linear_diffusion.cpp  test_mesh.cpp  test_richards.cpp  test_two_layer.cpp
